# fastfermion

./: .clang-format  .gitignore  LOG.md  Makefile  README.md  meson.build  pyproject.toml
fastfermion/: __init__.py
src/: bits.h  bits_utils.h  common.h  debug.h  error.h  fermi_algebra.h  fermi_sparse.h  fockstate.h  format_poly.h  gen.h  majorana_algebra.h  majorana_gates.h  majorana_propagation.h  majorana_sparse.h  matrix.h  parse.h  pauli_algebra.h  pauli_batched.h  pauli_gates.h  pauli_propagation.h  pauli_propagation_omp.h  pauli_sorted.h  pauli_sparse.h  python_bind.cpp  qubitproductstate.h  subspaces.h  transforms.h
src/hashmap/: unordered_dense.h
src/pauli/: algebra.h  gates.h  propagate.h  sorted.h  sparse.h  truncate.h
test/: batched_test.py  omp_test.py  sharded_test.py  sorted_test.py
