[build-system]
requires = ["meson-python>=0.16", "meson>=1.2", "pybind11>=2.12"]
build-backend = "mesonpy"

[project]
name = "fastfermion"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["scipy"]
description = "Fast library for Pauli, Fermi and Majorana operator algebras."
readme = "README.md"
